--- a/PlotSquared/translations/PlotSquared.use_THIS.yml
+++ b/PlotSquared/translations/PlotSquared.use_THIS.yml
@@ -225,6 +225,7 @@ errors:
   wait_for_timer: $2A setblock timer is bound to either the current plot or you. Please wait for it to finish
   error: '$2An error occured: %s'
   invalid_command_flag: '$2Invalid command flag: %s0'
+  not_loaded: $2The plot could not be loaded
 paste:
   debug_report_created: '$1Uploaded a full debug to: $1%url%'
 purge:
