--- a/LibsDisguises/Translations/disguise_option_parameters.yml
+++ b/LibsDisguises/Translations/disguise_option_parameters.yml
@@ -11402,3 +11402,294 @@
 
 # Used for the disguise option Villager Profession
 "NITWIT": "NITWIT"
+
+# Used for the disguise option Art
+"WITHER": "WITHER"
+
+# Used for the disguise option Art
+"POINTER": "POINTER"
+
+# Used for the disguise option Art
+"PIGSCENE": "PIGSCENE"
+
+# Used for the disguise option Art
+"SKELETON": "SKELETON"
+
+# Used as a disguise option
+"Block Position (num,num,num)": "Block Position (num,num,num)"
+
+# Used as a disguise option
+"Direction (North, East, South, West, Up, Down)": "Direction (North, East, South, West, Up, Down)"
+
+# Description for the disguise option Direction (North, East, South, West, Up, Down)
+"View the directions usable on player setSleeping and shulker direction": "View the directions usable on player setSleeping and shulker direction"
+
+# Used for the disguise option Direction (North, East, South, West, Up, Down)
+"NORTH": "NORTH"
+
+# Used for the disguise option Direction (North, East, South, West, Up, Down)
+"EAST": "EAST"
+
+# Used for the disguise option Direction (North, East, South, West, Up, Down)
+"WEST": "WEST"
+
+# Used for the disguise option Direction (North, East, South, West, Up, Down)
+"UP": "UP"
+
+# Used for the disguise option Direction (North, East, South, West, Up, Down)
+"DOWN": "DOWN"
+
+# Used as a disguise option
+"Four ItemStacks (id:damage,id:damage..), damage optional": "Four ItemStacks (id:damage,id:damage..), damage optional"
+
+# Description for the disguise option Four ItemStacks (id:damage,id:damage..), damage optional
+"Four ItemStacks separated by an ,": "Four ItemStacks separated by an ,"
+
+# Used as a disguise option
+"GameProfile": "GameProfile"
+
+# Used as a disguise option
+"Horse Color": "Horse Color"
+
+# Used for the disguise option Horse Color
+"CHESTNUT": "CHESTNUT"
+
+# Description for the disguise option Horse Style
+"Horse style which is the patterns on the horse": "Horse style which is the patterns on the horse"
+
+# Used for the disguise option Horse Style
+"NONE": "NONE"
+
+# Used as a disguise option
+"Item (id:damage), damage optional": "Item (id:damage), damage optional"
+
+# Description for the disguise option Item (id:damage), damage optional
+"An ItemStack compromised of ID:Durability": "An ItemStack compromised of ID:Durability"
+
+# Used as a disguise option
+"Ocelot Type": "Ocelot Type"
+
+# Description for the disguise option Ocelot Type
+"View all the ocelot types you can use for ocelots": "View all the ocelot types you can use for ocelots"
+
+# Used for the disguise option Ocelot Type
+"WILD_OCELOT": "WILD_OCELOT"
+
+# Used as a disguise option
+"Potion Effect": "Potion Effect"
+
+# Used for the disguise option Potion Effect
+"Fast_Digging": "Fast_Digging"
+
+# Used for the disguise option Potion Effect
+"Slow_Digging": "Slow_Digging"
+
+# Used for the disguise option Potion Effect
+"Heal": "Heal"
+
+# Used for the disguise option Potion Effect
+"Water_Breathing": "Water_Breathing"
+
+# Used for the disguise option Potion Effect
+"Night_Vision": "Night_Vision"
+
+# Used for the disguise option Potion Effect
+"Weakness": "Weakness"
+
+# Used for the disguise option Potion Effect
+"Health_Boost": "Health_Boost"
+
+# Used for the disguise option Potion Effect
+"Absorption": "Absorption"
+
+# Used for the disguise option Potion Effect
+"Saturation": "Saturation"
+
+# Used for the disguise option Potion Effect
+"Levitation": "Levitation"
+
+# Used for the disguise option Potion Effect
+"Luck": "Luck"
+
+# Used as a disguise option
+"Rabbit Type": "Rabbit Type"
+
+# Used for the disguise option Rabbit Type
+"GOLD": "GOLD"
+
+# Used for the disguise option Rabbit Type
+"KILLER_BUNNY": "KILLER_BUNNY"
+
+# Used for the disguise option Rabbit Type
+"PEPPER": "PEPPER"
+
+# Used for the disguise option Tree Species
+"GENERIC": "GENERIC"
+
+# Used for the disguise option Tree Species
+"REDWOOD": "REDWOOD"
+
+# Used for the disguise option Tree Species
+"DARK_OAK": "DARK_OAK"
+
+# Used as a disguise option
+"Villager Profession": "Villager Profession"
+
+# Description for the disguise option Villager Profession
+"View all the professions you can set on a villager": "View all the professions you can set on a villager"
+
+# Used for the disguise option Villager Profession
+"FARMER": "FARMER"
+
+# Used for the disguise option Villager Profession
+"LIBRARIAN": "LIBRARIAN"
+
+# Used for the disguise option Villager Profession
+"BUTCHER": "BUTCHER"
+
+# Used for the disguise option Art
+"WITHER": "WITHER"
+
+# Used for the disguise option Art
+"SKELETON": "SKELETON"
+
+# Used for the disguise option Art
+"DONKEYKONG": "DONKEYKONG"
+
+# Used as a disguise option
+"Block Position (num,num,num)": "Block Position (num,num,num)"
+
+# Used as a disguise option
+"Direction (North, East, South, West, Up, Down)": "Direction (North, East, South, West, Up, Down)"
+
+# Used for the disguise option Direction (North, East, South, West, Up, Down)
+"EAST": "EAST"
+
+# Used for the disguise option Direction (North, East, South, West, Up, Down)
+"SOUTH": "SOUTH"
+
+# Used for the disguise option Direction (North, East, South, West, Up, Down)
+"WEST": "WEST"
+
+# Used for the disguise option Direction (North, East, South, West, Up, Down)
+"UP": "UP"
+
+# Used for the disguise option Direction (North, East, South, West, Up, Down)
+"DOWN": "DOWN"
+
+# Description for the disguise option Four ItemStacks (id:damage,id:damage..), damage optional
+"Four ItemStacks separated by an ,": "Four ItemStacks separated by an ,"
+
+# Used as a disguise option
+"Horse Color": "Horse Color"
+
+# Used for the disguise option Horse Color
+"CHESTNUT": "CHESTNUT"
+
+# Description for the disguise option Horse Style
+"Horse style which is the patterns on the horse": "Horse style which is the patterns on the horse"
+
+# Used for the disguise option Horse Style
+"NONE": "NONE"
+
+# Used for the disguise option Horse Style
+"WHITEFIELD": "WHITEFIELD"
+
+# Used as a disguise option
+"Main Hand": "Main Hand"
+
+# Used for the disguise option Ocelot Type
+"RED_CAT": "RED_CAT"
+
+# Description for the disguise option Potion Effect
+"View all the potion effects you can add": "View all the potion effects you can add"
+
+# Used for the disguise option Potion Effect
+"Speed": "Speed"
+
+# Used for the disguise option Potion Effect
+"Increase_Damage": "Increase_Damage"
+
+# Used for the disguise option Potion Effect
+"Harm": "Harm"
+
+# Used for the disguise option Potion Effect
+"Jump": "Jump"
+
+# Used for the disguise option Potion Effect
+"Regeneration": "Regeneration"
+
+# Used for the disguise option Potion Effect
+"Fire_Resistance": "Fire_Resistance"
+
+# Used for the disguise option Potion Effect
+"Invisibility": "Invisibility"
+
+# Used for the disguise option Potion Effect
+"Blindness": "Blindness"
+
+# Used for the disguise option Potion Effect
+"Hunger": "Hunger"
+
+# Used for the disguise option Potion Effect
+"Poison": "Poison"
+
+# Used for the disguise option Potion Effect
+"Wither": "Wither"
+
+# Used for the disguise option Potion Effect
+"Glowing": "Glowing"
+
+# Used for the disguise option Potion Effect
+"Luck": "Luck"
+
+# Used for the disguise option Potion Effect
+"Unluck": "Unluck"
+
+# Description for the disguise option Rabbit Type
+"View the kinds of rabbits you can turn into": "View the kinds of rabbits you can turn into"
+
+# Used for the disguise option Rabbit Type
+"PATCHES": "PATCHES"
+
+# Used as a disguise option
+"Text": "Text"
+
+# Description for the disguise option Text
+"A line of text": "A line of text"
+
+# Used as a disguise option
+"Tree Species": "Tree Species"
+
+# Description for the disguise option Tree Species
+"View the different types of tree species": "View the different types of tree species"
+
+# Used for the disguise option Tree Species
+"ACACIA": "ACACIA"
+
+# Used for the disguise option Tree Species
+"DARK_OAK": "DARK_OAK"
+
+# Used as a disguise option
+"True/False": "True/False"
+
+# Used for the disguise option True/False
+"false": "false"
+
+# Used as a disguise option
+"Villager Profession": "Villager Profession"
+
+# Description for the disguise option Villager Profession
+"View all the professions you can set on a villager": "View all the professions you can set on a villager"
+
+# Used for the disguise option Villager Profession
+"FARMER": "FARMER"
+
+# Used for the disguise option Villager Profession
+"PRIEST": "PRIEST"
+
+# Used for the disguise option Villager Profession
+"BLACKSMITH": "BLACKSMITH"
+
+# Used for the disguise option Villager Profession
+"HUSK": "HUSK"
