--- a/LibsDisguises/Translations/disguise_option_parameters.yml
+++ b/LibsDisguises/Translations/disguise_option_parameters.yml
@@ -12752,3 +12752,117 @@
 
 # Used for the disguise option Villager Profession
 "PRIEST": "PRIEST"
+
+# Used for the disguise option Art
+"POINTER": "POINTER"
+
+# Used for the disguise option Art
+"PIGSCENE": "PIGSCENE"
+
+# Used for the disguise option Art
+"SKELETON": "SKELETON"
+
+# Used for the disguise option Art
+"DONKEYKONG": "DONKEYKONG"
+
+# Used as a disguise option
+"Block Position (num,num,num)": "Block Position (num,num,num)"
+
+# Description for the disguise option Direction (North, East, South, West, Up, Down)
+"View the directions usable on player setSleeping and shulker direction": "View the directions usable on player setSleeping and shulker direction"
+
+# Used for the disguise option Direction (North, East, South, West, Up, Down)
+"EAST": "EAST"
+
+# Used for the disguise option Direction (North, East, South, West, Up, Down)
+"SOUTH": "SOUTH"
+
+# Used for the disguise option Direction (North, East, South, West, Up, Down)
+"DOWN": "DOWN"
+
+# Used as a disguise option
+"Horse Color": "Horse Color"
+
+# Used for the disguise option Horse Color
+"CHESTNUT": "CHESTNUT"
+
+# Description for the disguise option Horse Style
+"Horse style which is the patterns on the horse": "Horse style which is the patterns on the horse"
+
+# Used for the disguise option Horse Style
+"WHITEFIELD": "WHITEFIELD"
+
+# Description for the disguise option Item (id:damage), damage optional
+"An ItemStack compromised of ID:Durability": "An ItemStack compromised of ID:Durability"
+
+# Used for the disguise option Potion Effect
+"Increase_Damage": "Increase_Damage"
+
+# Used for the disguise option Potion Effect
+"Harm": "Harm"
+
+# Used for the disguise option Potion Effect
+"Jump": "Jump"
+
+# Used for the disguise option Potion Effect
+"Fire_Resistance": "Fire_Resistance"
+
+# Used for the disguise option Potion Effect
+"Invisibility": "Invisibility"
+
+# Used for the disguise option Potion Effect
+"Weakness": "Weakness"
+
+# Used for the disguise option Potion Effect
+"Poison": "Poison"
+
+# Used for the disguise option Potion Effect
+"Wither": "Wither"
+
+# Used for the disguise option Potion Effect
+"Glowing": "Glowing"
+
+# Used for the disguise option Potion Effect
+"Luck": "Luck"
+
+# Description for the disguise option Rabbit Type
+"View the kinds of rabbits you can turn into": "View the kinds of rabbits you can turn into"
+
+# Used for the disguise option Tree Species
+"GENERIC": "GENERIC"
+
+# Used for the disguise option Tree Species
+"REDWOOD": "REDWOOD"
+
+# Used for the disguise option Tree Species
+"BIRCH": "BIRCH"
+
+# Used for the disguise option Tree Species
+"JUNGLE": "JUNGLE"
+
+# Used for the disguise option Tree Species
+"ACACIA": "ACACIA"
+
+# Used for the disguise option Tree Species
+"DARK_OAK": "DARK_OAK"
+
+# Used as a disguise option
+"True/False": "True/False"
+
+# Used for the disguise option True/False
+"true": "true"
+
+# Used for the disguise option True/False
+"false": "false"
+
+# Used as a disguise option
+"Villager Profession": "Villager Profession"
+
+# Description for the disguise option Villager Profession
+"View all the professions you can set on a villager": "View all the professions you can set on a villager"
+
+# Used for the disguise option Villager Profession
+"BLACKSMITH": "BLACKSMITH"
+
+# Used for the disguise option Villager Profession
+"HUSK": "HUSK"
