--- a/LibsDisguises/Translations/disguises.yml
+++ b/LibsDisguises/Translations/disguises.yml
@@ -16577,3 +16577,153 @@
 
 # Used for the disgiuse modify radius command to list all disguisetypes
 "DisgiseType": "DisgiseType"
+
+# Name for the ARMOR_STAND disguise
+"Armor Stand": "Armor Stand"
+
+# Name for the CAVE_SPIDER disguise
+"Cave Spider": "Cave Spider"
+
+# Name for the ELDER_GUARDIAN disguise
+"Elder Guardian": "Elder Guardian"
+
+# Name for the ENDER_CRYSTAL disguise
+"Ender Crystal": "Ender Crystal"
+
+# Name for the ENDER_DRAGON disguise
+"Ender Dragon": "Ender Dragon"
+
+# Name for the ENDER_PEARL disguise
+"Ender Pearl": "Ender Pearl"
+
+# Name for the ENDER_SIGNAL disguise
+"Ender Signal": "Ender Signal"
+
+# Name for the ILLUSIONER disguise
+"Illusioner": "Illusioner"
+
+# Name for the LEASH_HITCH disguise
+"Leash Hitch": "Leash Hitch"
+
+# Name for the MAGMA_CUBE disguise
+"Magma Cube": "Magma Cube"
+
+# Name for the MINECART_CHEST disguise
+"Minecart Chest": "Minecart Chest"
+
+# Name for the MINECART_COMMAND disguise
+"Minecart Command": "Minecart Command"
+
+# Name for the MINECART_TNT disguise
+"Minecart Tnt": "Minecart Tnt"
+
+# Name for the MUSHROOM_COW disguise
+"Mushroom Cow": "Mushroom Cow"
+
+# Name for the PARROT disguise
+"Parrot": "Parrot"
+
+# Name for the PIG_ZOMBIE disguise
+"Pig Zombie": "Pig Zombie"
+
+# Name for the POLAR_BEAR disguise
+"Polar Bear": "Polar Bear"
+
+# Name for the TIPPED_ARROW disguise
+"Tipped Arrow": "Tipped Arrow"
+
+# Name for the ZOMBIE_HORSE disguise
+"Zombie Horse": "Zombie Horse"
+
+# Name for the FallingBlock EntityType, this is used in radius commands
+"FallingBlock": "FallingBlock"
+
+# Name for the ArmorStand EntityType, this is used in radius commands
+"ArmorStand": "ArmorStand"
+
+# Name for the CaveSpider EntityType, this is used in radius commands
+"CaveSpider": "CaveSpider"
+
+# Name for the ShulkerBullet EntityType, this is used in radius commands
+"ShulkerBullet": "ShulkerBullet"
+
+# Name for the TippedArrow EntityType, this is used in radius commands
+"TippedArrow": "TippedArrow"
+
+# Name for the SpawnerMinecart EntityType, this is used in radius commands
+"SpawnerMinecart": "SpawnerMinecart"
+
+# Name for the StorageMinecart EntityType, this is used in radius commands
+"StorageMinecart": "StorageMinecart"
+
+# Name for the PoweredMinecart EntityType, this is used in radius commands
+"PoweredMinecart": "PoweredMinecart"
+
+# Name for the SkeletonHorse EntityType, this is used in radius commands
+"SkeletonHorse": "SkeletonHorse"
+
+# Name for the ItemFrame EntityType, this is used in radius commands
+"ItemFrame": "ItemFrame"
+
+# Name for the FishHook EntityType, this is used in radius commands
+"FishHook": "FishHook"
+
+# Name for the EnderCrystal EntityType, this is used in radius commands
+"EnderCrystal": "EnderCrystal"
+
+# Name for the EnderPearl EntityType, this is used in radius commands
+"EnderPearl": "EnderPearl"
+
+# Name for the Fish EntityType, this is used in radius commands
+"Fish": "Fish"
+
+# Name for the Spellcaster EntityType, this is used in radius commands
+"Spellcaster": "Spellcaster"
+
+# Name for the WaterMob EntityType, this is used in radius commands
+"WaterMob": "WaterMob"
+
+# Name for the IronGolem EntityType, this is used in radius commands
+"IronGolem": "IronGolem"
+
+# Name for the EnderSignal EntityType, this is used in radius commands
+"EnderSignal": "EnderSignal"
+
+# Name for the ThrownPotion EntityType, this is used in radius commands
+"ThrownPotion": "ThrownPotion"
+
+# Name for the Damageable EntityType, this is used in radius commands
+"Damageable": "Damageable"
+
+# Name for the LingeringPotion EntityType, this is used in radius commands
+"LingeringPotion": "LingeringPotion"
+
+# Name for the MushroomCow EntityType, this is used in radius commands
+"MushroomCow": "MushroomCow"
+
+# Name for the LivingEntity EntityType, this is used in radius commands
+"LivingEntity": "LivingEntity"
+
+# Name for the LeashHitch EntityType, this is used in radius commands
+"LeashHitch": "LeashHitch"
+
+# Name for the TNTPrimed EntityType, this is used in radius commands
+"TNTPrimed": "TNTPrimed"
+
+# Name for the Weather EntityType, this is used in radius commands
+"Weather": "Weather"
+
+# Name for the PigZombie EntityType, this is used in radius commands
+"PigZombie": "PigZombie"
+
+# Name for the SplashPotion EntityType, this is used in radius commands
+"SplashPotion": "SplashPotion"
+
+# Name for the Flying EntityType, this is used in radius commands
+"Flying": "Flying"
+
+# Name for the Animals EntityType, this is used in radius commands
+"Animals": "Animals"
+
+# Used for the disgiuse radius command to list all entitytypes
+"EntityType": "EntityType"
