--- a/LibsDisguises/Translations/disguise_option_parameters.yml
+++ b/LibsDisguises/Translations/disguise_option_parameters.yml
@@ -14690,3 +14690,117 @@
 
 # Used for the disguise option Villager Profession
 "HUSK": "HUSK"
+
+# Used for the disguise option Art
+"POINTER": "POINTER"
+
+# Used for the disguise option Art
+"PIGSCENE": "PIGSCENE"
+
+# Used for the disguise option Art
+"DONKEYKONG": "DONKEYKONG"
+
+# Used as a disguise option
+"Block Position (num,num,num)": "Block Position (num,num,num)"
+
+# Description for the disguise option Direction (North, East, South, West, Up, Down)
+"View the directions usable on player setSleeping and shulker direction": "View the directions usable on player setSleeping and shulker direction"
+
+# Used for the disguise option Direction (North, East, South, West, Up, Down)
+"EAST": "EAST"
+
+# Used for the disguise option Direction (North, East, South, West, Up, Down)
+"SOUTH": "SOUTH"
+
+# Used for the disguise option Direction (North, East, South, West, Up, Down)
+"DOWN": "DOWN"
+
+# Description for the disguise option Four ItemStacks (id:damage,id:damage..), damage optional
+"Four ItemStacks separated by an ,": "Four ItemStacks separated by an ,"
+
+# Used as a disguise option
+"GameProfile": "GameProfile"
+
+# Description for the disguise option Horse Style
+"Horse style which is the patterns on the horse": "Horse style which is the patterns on the horse"
+
+# Used for the disguise option Horse Style
+"NONE": "NONE"
+
+# Description for the disguise option Item (id:damage), damage optional
+"An ItemStack compromised of ID:Durability": "An ItemStack compromised of ID:Durability"
+
+# Used as a disguise option
+"Main Hand": "Main Hand"
+
+# Description for the disguise option Ocelot Type
+"View all the ocelot types you can use for ocelots": "View all the ocelot types you can use for ocelots"
+
+# Used for the disguise option Ocelot Type
+"RED_CAT": "RED_CAT"
+
+# Description for the disguise option Parrot Variant
+"View the different colors a parrot can be": "View the different colors a parrot can be"
+
+# Used as a disguise option
+"Potion Effect": "Potion Effect"
+
+# Description for the disguise option Potion Effect
+"View all the potion effects you can add": "View all the potion effects you can add"
+
+# Used for the disguise option Potion Effect
+"Speed": "Speed"
+
+# Used for the disguise option Potion Effect
+"Heal": "Heal"
+
+# Used for the disguise option Potion Effect
+"Hunger": "Hunger"
+
+# Used for the disguise option Potion Effect
+"Absorption": "Absorption"
+
+# Used for the disguise option Potion Effect
+"Saturation": "Saturation"
+
+# Used for the disguise option Potion Effect
+"Glowing": "Glowing"
+
+# Used for the disguise option Rabbit Type
+"GOLD": "GOLD"
+
+# Used for the disguise option Rabbit Type
+"KILLER_BUNNY": "KILLER_BUNNY"
+
+# Used as a disguise option
+"Text": "Text"
+
+# Description for the disguise option Text
+"A line of text": "A line of text"
+
+# Used as a disguise option
+"Tree Species": "Tree Species"
+
+# Description for the disguise option Tree Species
+"View the different types of tree species": "View the different types of tree species"
+
+# Used for the disguise option Tree Species
+"GENERIC": "GENERIC"
+
+# Used for the disguise option True/False
+"true": "true"
+
+# Used for the disguise option True/False
+"false": "false"
+
+# Used as a disguise option
+"Villager Profession": "Villager Profession"
+
+# Description for the disguise option Villager Profession
+"View all the professions you can set on a villager": "View all the professions you can set on a villager"
+
+# Used for the disguise option Villager Profession
+"FARMER": "FARMER"
+
+# Used for the disguise option Villager Profession
+"PRIEST": "PRIEST"
